# mydot

./: .gitignore  README.md  pyproject.toml
mydot/: __main__.py  cli.py  constants.py  extractor.py
mydots/: __main__.py  abstract.py  cli.py  extractor.py  extractors.py  results.py
tests/: sample.json  test_extractors.py
